--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .truncate-3-lines {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
